Apply ansible-lint improvements with light touch
- Fix syntax errors in playbooks by properly structuring them
- Fix YAML indentation in cloud-init base.yml
- Update ansible-lint configuration to be stricter but reasonable
- Add requirements.yml for Ansible collections
- Skip role-name rule for now due to many cloud-* roles

--- a/playbooks/rescue.yml
+++ b/playbooks/rescue.yml
@@ -1,6 +1,10 @@
 ---
-- debug:
-    var: fail_hint
+- name: Rescue tasks  
+  hosts: localhost
+  gather_facts: false
+  tasks:
+    - debug:
+        var: fail_hint
 
-- name: Fail the installation
-  fail:
+    - name: Fail the installation
+      fail:
