--- a/playbooks/cloud-pre.yml
+++ b/playbooks/cloud-pre.yml
@@ -1,7 +1,11 @@
 ---
-- block:
-    - name: Display the invocation environment
-      shell: >
+- name: Cloud pre-provisioning tasks
+  hosts: localhost
+  gather_facts: false
+  tasks:
+    - block:
+        - name: Display the invocation environment
+          shell: >
         ./algo-showenv.sh \
           'algo_provider "{{ algo_provider }}"' \
           {% if ipsec_enabled %}
@@ -16,8 +20,8 @@
           > /dev/tty || true
       tags: debug
 
-    - name: Install the requirements
-      pip:
+        - name: Install the requirements
+          pip:
         state: present
         name:
           - pyOpenSSL>=0.15
@@ -25,29 +29,29 @@
       tags:
         - always
         - skip_ansible_lint
-  delegate_to: localhost
-  become: false
+      delegate_to: localhost
+      become: false
 
-- block:
-    - name: Generate the SSH private key
-      openssl_privatekey:
+    - block:
+        - name: Generate the SSH private key
+          openssl_privatekey:
         path: "{{ SSH_keys.private }}"
         size: 4096
         mode: "0600"
         type: RSA
 
-    - name: Generate the SSH public key
-      openssl_publickey:
+        - name: Generate the SSH public key
+          openssl_publickey:
         path: "{{ SSH_keys.public }}"
         privatekey_path: "{{ SSH_keys.private }}"
         format: OpenSSH
 
-    - name: Copy the private SSH key to /tmp
-      copy:
+        - name: Copy the private SSH key to /tmp
+          copy:
         src: "{{ SSH_keys.private }}"
         dest: "{{ SSH_keys.private_tmp }}"
         force: true
         mode: "0600"
-      delegate_to: localhost
-      become: false
-  when: algo_provider != "local"
+          delegate_to: localhost
+          become: false
+      when: algo_provider != "local"
