--- a/roles/common/tasks/facts.yml
+++ b/roles/common/tasks/facts.yml
@@ -3,11 +3,13 @@
   set_fact:
     p12_export_password: "{{ p12_password|default(lookup('password', '/dev/null length=9 chars=ascii_letters,digits,_,@')) }}"
   tags: update-users
+  no_log: true
 
 - name: Set facts
   set_fact:
     CA_password: "{{ ca_password|default(lookup('password', '/dev/null length=16 chars=ascii_letters,digits,_,@')) }}"
     IP_subject_alt_name: "{{ IP_subject_alt_name }}"
+  no_log: true
 
 - name: Set IPv6 support as a fact
   set_fact:
