--- a/roles/wireguard/tasks/keys.yml
+++ b/roles/wireguard/tasks/keys.yml
@@ -16,6 +16,7 @@
   with_items:
     - "{{ users }}"
     - "{{ IP_subject_alt_name }}"
+  no_log: true
 
 - block:
     - name: Save private keys
@@ -55,6 +56,7 @@
   with_items:
     - "{{ users }}"
     - "{{ IP_subject_alt_name }}"
+  no_log: true
 
 - block:
     - name: Save preshared keys
@@ -89,6 +91,7 @@
   with_items:
     - "{{ users }}"
     - "{{ IP_subject_alt_name }}"
+  no_log: true
 
 - name: Save public keys
   copy:
