--- a/roles/wireguard/tasks/main.yml
+++ b/roles/wireguard/tasks/main.yml
@@ -74,6 +74,7 @@
           args:
             chdir: "{{ wireguard_config_path }}"
             executable: bash
+          no_log: true
       become: false
       delegate_to: localhost
 
