feat: Comprehensive privacy enhancements
- Add no_log directives to all cloud provider credential handling
- Set privacy-focused defaults (StrongSwan logging disabled, DNSCrypt syslog off)
- Implement privacy role with log rotation, history clearing, and log filtering
- Add Privacy Considerations section to README
- Make all privacy features configurable and enabled by default

This update significantly reduces Algo's logging footprint to enhance user privacy
while maintaining the ability to enable logging for debugging when needed.

--- a/config.cfg
+++ b/config.cfg
@@ -117,7 +117,69 @@ keys_clean_all: false
 
 # StrongSwan log level
 # https://wiki.strongswan.org/projects/strongswan/wiki/LoggerConfiguration
-strongswan_log_level: 2
+# Privacy enhancement: Set to -1 to disable logging of VPN connection details
+# Level 2 logs connection attempts and authentication which may reveal usage patterns
+# Level -1 disables logging entirely for enhanced privacy
+strongswan_log_level: -1
+
+### Privacy Enhancements ###
+# Additional privacy measures to reduce server-side traces of VPN usage
+# These settings help protect user privacy by minimizing log retention and filtering sensitive data
+
+# Enable enhanced privacy features
+# Set to false to disable all privacy enhancements (useful for debugging)
+privacy_enhancements_enabled: true
+
+# Log rotation and retention settings
+privacy_log_rotation:
+  # Maximum age for logs in days (shorter = more private, but less debugging info)
+  max_age: 7
+  # Maximum size for individual log files in MB
+  max_size: 10
+  # Number of rotated files to keep
+  rotate_count: 3
+  # Compress rotated logs to save space
+  compress: true
+  # Force daily rotation
+  daily_rotation: true
+
+# History clearing configuration
+privacy_history_clearing:
+  # Clear bash/shell history after deployment
+  clear_bash_history: true
+  # Clear system command history logs
+  clear_system_history: true
+  # Disable persistent history for system users
+  disable_service_history: true
+
+# Log filtering to exclude VPN-related entries
+privacy_log_filtering:
+  # Filter out VPN connection logs (WireGuard, StrongSwan, etc.)
+  exclude_vpn_logs: true
+  # Filter out detailed authentication logs (reduces security logging - use with caution)
+  exclude_auth_logs: false
+  # Filter kernel messages related to VPN traffic
+  filter_kernel_vpn_logs: true
+
+# Automatic cleanup policies
+privacy_auto_cleanup:
+  # Enable automatic cleanup of old logs and temporary files
+  enabled: true
+  # Cleanup frequency: daily, weekly, or monthly
+  frequency: "daily"
+  # Remove temporary files older than N days
+  temp_files_max_age: 1
+  # Clean package manager cache
+  clean_package_cache: true
+
+# Advanced privacy settings (use with caution)
+privacy_advanced:
+  # Disable logging of successful SSH connections (keeps failures for security)
+  disable_ssh_success_logs: false
+  # Reduce kernel log verbosity to minimize VPN traces
+  reduce_kernel_verbosity: true
+  # Clear all logs on system shutdown (extreme privacy measure)
+  clear_logs_on_shutdown: false
 
 # rightsourceip for ipsec
 # ipv4
