--- a/roles/cloud-linode/tasks/main.yml
+++ b/roles/cloud-linode/tasks/main.yml
@@ -23,6 +23,7 @@
     script: |
       {{ stackscript }}
   register: _linode_stackscript
+  no_log: true
 
 - name: Update the stackscript
   uri:
@@ -36,6 +37,7 @@
       Content-Type: application/json
       Authorization: Bearer {{ algo_linode_token }}
   when: (_linode_stackscript.stackscript.script | hash('md5')) != (stackscript | hash('md5'))
+  no_log: true
 
 - name: Creating an instance...
   linode_v4:
@@ -48,6 +50,7 @@
     authorized_keys: "{{ public_key }}"
     stackscript_id: "{{ _linode_stackscript.stackscript.id }}"
   register: _linode
+  no_log: true
 
 - set_fact:
     cloud_instance_ip: "{{ _linode.instance.ipv4[0] }}"
