ci: Make ansible-lint stricter and fix basic issues
- Remove || true from ansible-lint CI job to enforce linting
- Enable name[play] rule - all plays should be named
- Enable yaml[new-line-at-end-of-file] rule
- Move name[missing] from skip_list to warn_list (first step)
- Add names to plays in main.yml and users.yml
- Document future linting improvements in comments

This makes the CI stricter while fixing the easy issues first.
More comprehensive fixes for the 113 name[missing] warnings can
be addressed in future PRs.

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -27,8 +27,7 @@ jobs:
 
       - name: Run ansible-lint
         run: |
-          # Run with || true temporarily while we make the linter less strict
-          ansible-lint -v *.yml roles/{local,cloud-*}/*/*.yml || true
+          ansible-lint -v *.yml roles/{local,cloud-*}/*/*.yml
 
   yaml-lint:
     name: YAML linting
