fix: Fix ansible-lint critical errors
- Fix schema[tasks] error in roles/local/tasks/prompts.yml by removing with_items loop
- Add missing newline at end of requirements.yml
- Replace ignore_errors with failed_when in reboot task
- Add pipefail to shell command with pipes in strongswan openssl task

These fixes address all critical ansible-lint errors that were causing CI failures.

--- a/roles/common/tasks/ubuntu.yml
+++ b/roles/common/tasks/ubuntu.yml
@@ -25,7 +25,7 @@
       async: 1
       poll: 0
       when: reboot_required is defined and reboot_required.stdout == 'required'
-      ignore_errors: true
+      failed_when: false
 
     - name: Wait until the server becomes ready...
       wait_for_connection:
