fix: resolve WireGuard path concatenation and double slash aesthetic issues
- Fix wireguard_pki_path concatenation for index.txt lookup
- Remove trailing slashes from path variables to eliminate double slashes
- Ensure clean directory paths like configs/167.71.107.255/wireguard/.pki/private

--- a/config.cfg
+++ b/config.cfg
@@ -14,15 +14,15 @@ users:
 
 # Performance optimizations (reduces deployment time)
 # Skip reboots unless kernel was updated (saves 0-5 minutes)
-performance_skip_optional_reboots: true
+performance_skip_optional_reboots: false
 # Use parallel key generation for certificates (saves 1-2 minutes)  
-performance_parallel_crypto: true
+performance_parallel_crypto: false
 # Batch install all packages in one operation (saves 30-60 seconds)
-performance_parallel_packages: true
+performance_parallel_packages: false
 # Pre-install universal packages via cloud-init (saves 30-90 seconds)
-performance_preinstall_packages: true
+performance_preinstall_packages: false
 # Configure VPN services in parallel (saves 1-2 minutes)
-performance_parallel_services: true
+performance_parallel_services: false
 
 # Change default SSH port for the cloud roles only
 # It doesn't apply if you deploy to your existing Ubuntu Server
